adding dom changes

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -48,5 +48,28 @@
           </div>
         </div>
       </div>
+</body>
+</html-->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Manipulacion del dom</title>
+  <script src="main.js" defer></script>
+  <script src="bd.js" defer></script>
+
+</head>
+<body>
+  <section id="root">
+    <form id="datos_usuario">
+      <input type="text" name="usuario" placeholder="usuario">
+      <input type="text" name="contrasena" placeholder="contraseña">
+      <!--button onclick="hola()" id="accion">login</button-->
+      <button id="accion" class="controls">login</button>
+    </form>
+  </section>
+  <section id="perfilUsuario"></section>
 </body>
 </html>
